# Nexel

./: CONVERSION_COMPLETE.md  MIGRATION_GUIDE.md
.github/workflows/: build.yml
native/: .gitignore  CMakeLists.txt  build.sh
native/libs/nativeviz/: CMakeLists.txt
native/libs/nativeviz/include/nativeviz/: nv.h  nv_chart.h  nv_types.h
native/libs/nativeviz/shaders/: blur.metal  decimation.metal  gradient.metal  line_strip.metal  sdf_shapes.metal
native/libs/nativeviz/src/api/: nv_api.cpp
native/libs/nativeviz/src/chart/: NVAxis.cpp  NVAxis.h  NVChart.cpp  NVChart.h  NVLegend.cpp  NVLegend.h  NVTheme.cpp  NVTheme.h
native/libs/nativeviz/src/chart/types/: NVBarChart.cpp  NVBarChart.h  NVLineChart.cpp  NVLineChart.h  NVScatterChart.cpp  NVScatterChart.h
native/libs/nativeviz/src/hal/: NVBuffer.h  NVCommandBuffer.h  NVDevice.h  NVPipeline.h  NVTexture.h
native/libs/nativeviz/src/hal/metal/: MetalBuffer.h  MetalBuffer.mm  MetalCommandBuffer.h  MetalCommandBuffer.mm  MetalDevice.h  MetalDevice.mm  MetalPipeline.h  MetalPipeline.mm  MetalShaderSource.h  MetalTexture.h  MetalTexture.mm
native/libs/nativeviz/src/render/: NVGradient.cpp  NVGradient.h  NVPath.cpp  NVPath.h  NVRenderer2D.cpp  NVRenderer2D.h
native/libs/nativeviz/src/scene/: NVScene.cpp  NVScene.h
native/resources/: generate_icon.py  nexel.rc
